tests/negative/Pointer.tst

void func()
{
	int a;

	a@ = 5;
}

========

error: variable a can not be dereferenced
found 1 errors
